# pill-infographic-generator

./: .gitignore  pyproject.toml
research/: 알약 영상의 배경 제거 실험.ipynb
