[tool.poetry]
name = "pill-infographic-generator"
version = "0.1.0"
description = ""
authors = ["Hepheir <hepheir@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0"
requests = "^2.30.0"
matplotlib = "^3.7.1"
ipykernel = "^6.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
